--- a/AcmClient/packages.config
+++ b/AcmClient/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="AngleSharp" version="0.9.9" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net45" />
+  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net45" />
+  <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
 </packages>
