--- a/AcmClient/packages.config
+++ b/AcmClient/packages.config
@@ -5,4 +5,6 @@
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net45" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
+  <package id="ToastNotifications" version="2.1.2" targetFramework="net46" />
+  <package id="ToastNotifications.Messages" version="2.1.2" targetFramework="net46" />
 </packages>
