--- a/AcmClient/AcmClient.csproj
+++ b/AcmClient/AcmClient.csproj
@@ -162,6 +162,9 @@
   <ItemGroup>
     <Resource Include="Sources\icon.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Sources\ProblemList.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
